@@ -1,12 +1,21 @@
-EXTRA_DIST = $(pixmap_DATA) $(desktop_DATA) xine.wmconfig
+EXTRA_DIST = $(pixmap_DATA) $(desktop_DATA) xine.wmconfig \
+	$(icon16_DATA) \
+	$(icon22_DATA) \
+	$(icon32_DATA) \
+	$(icon48_DATA) 
 
 pixmapdir = $(datadir)/pixmaps
+icon16dir = $(datadir)/icons/hicolor/16x16/apps
+icon22dir = $(datadir)/icons/hicolor/22x22/apps
+icon32dir = $(datadir)/icons/hicolor/32x32/apps
+icon48dir = $(datadir)/icons/hicolor/48x48/apps
 
-pixmap_DATA = xine_16x16.png \
-	xine_22x22.png \
-	xine_32x32.png \
-	xine_48x48.png \
-	xine.xpm
+icon16_DATA = icons/16/xine.png
+icon22_DATA = icons/22/xine.png
+icon32_DATA = icons/32/xine.png
+icon48_DATA = icons/48/xine.png
+
+pixmap_DATA = xine.xpm
 
 desktopdir = $(datadir)/xine/desktop
 desktop_DATA = xine.desktop
