@@ -1,8 +1,10 @@
 [Desktop Entry]
+Encoding=UTF-8
 Name=xine
 Comment=Video Player
 Exec=xine
 MimeType=video/mpeg;video/quicktime;video/x-msvideo;video/x-anim;audio/x-mp3;audio/x-mp2;
-Icon=xine.xpm
-Terminal=0
+Icon=xine
+Terminal=false
 Type=Application
+Categories=Application;AudioVideo;Player;
