@@ -4,6 +4,7 @@ xine-ui (0.99.5) unstable; urgency=low
   * Added zoom function to fbxine (thanks to Mike Lewis <lachlanlewis@gmail.com>)
   * backtrace in debug mode in FreeBSD too
   * fixed build with different prefix from xine-lib
+  * followed freedesktop standards (desktop file and icons)
 
 xine-ui (0.99.4) unstable; urgency=low
 
